fix for img on iOS and splash & icon

--- a/scss/media/media.scss
+++ b/scss/media/media.scss
@@ -3,17 +3,10 @@
   // background-size: cover;
   text-align: center;
   color: #FFF;
-  border: solid #FFF 1px;
   font-size: 1.1em;
   i {
     font-size: 4em;
   }
-}
-
-.media-select-link-vimeo {
-  @extend .center-flex-content;
-  @include media-select-links
-  background-color: #333;
 }
 
 .media-select-link-podcast {
@@ -21,4 +14,11 @@
   @include media-select-links
   background-color: #666;
 
+}
+
+.media-select-link-vimeo {
+  @extend .center-flex-content;
+  @include media-select-links
+  border-top: solid #FFF 2px;
+  background-color: #333;
 }
